<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiW</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo">Operaciones Servicio Web</string>
    <string name="progress_title">Conectando con la BD</string>
    <string name="sin_respuesta">El servidor no responde</string>
    <string name="sin_datos">La consulta no devuelve ningún registro</string>
    <string name="dni">DNI</string>
    <string name="nombre">Nombre</string>
	<string name="apellidos">Apellidos</string>
	<string name="direccion">Direccion</string>
	<string name="telefono">Telefono</string>
	<string name="equipo">Equipo</string>
	<string name="borradoRegistros">Borrado de Registros</string>
	<string name="consultaRegistros">Consulta de Registros</string>
	<string name="modificarRegistros">Modificacion de Registros</string>
	<string name="insertarRegistros">Insercion de Registros</string>
	<string name="registros">registro 1 de </string>
	<string name="registro_existe">Registro existente</string>
	<string name="registro_noexiste">Registro no existente</string>
	<string name="configuracion">Configurar Conexión</string>
	<string name="url">URL Servidor</string>
	<string name="urldescripcion">Dirección del servidor al que se realizará la conexión</string>
	<string name="usuario">Usuario</string>
	<string name="usuariodescripcion">Usuario que realizará la conexión</string>
	<string name="palabra">Palabra clave</string>
	<string name="palabradescripcion">Clave del usuario que realizará la conexión</string>
	<string name="conexioncorrecta">Servicio Conectado</string>
	<string name="conexionincorrecta">No se ha podido establecer la conexión con el servidor: Configure la conexión</string>
</resources>