<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/Cabecera"
        android:text="@string/borradoRegistros" 
        />

    <TableLayout
        style="@style/Tabla"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/dniBorrar"
                style="@style/EstiloTextView"
                android:text="@string/dni" />

            <TextView
                android:id="@+id/dniTextBorrar"
               style="@style/EstiloEditText2"
                android:ems="10"  />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow2"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/nombreBorrar"
                style="@style/EstiloTextView"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/nombreTextBorrar"
               style="@style/EstiloEditText2"
                android:ems="10" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow3"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/apellidoBorrar"
                style="@style/EstiloTextView"
                android:text="@string/apellidos" />

            <TextView
                android:id="@+id/apellidoTextBorrar"
                style="@style/EstiloEditText2"
                android:ems="10"  />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow4"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/textView3"
                style="@style/EstiloTextView"
                android:text="@string/direccion" />

            <TextView
                android:id="@+id/direccionTextBorrar"
               style="@style/EstiloEditText2"
                android:ems="10"  />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow5"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/telefonoBorrar"
                style="@style/EstiloTextView"
                android:text="@string/telefono" />

            <TextView
                android:id="@+id/telefonoTextBorrar"
                style="@style/EstiloEditText2"
                android:ems="10" />

        </TableRow>

          <TableRow
            android:id="@+id/tableRow6"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/equipoBorrar"
                style="@style/EstiloTextView"
               
                android:text="@string/equipo" />

            <TextView
                android:id="@+id/equipoTextBorrar"
                style="@style/EstiloEditText2"
                android:ems="10" />

        </TableRow>
    </TableLayout>
    <ImageButton
        android:layout_gravity="center_horizontal"
            android:id="@+id/eliminar"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="borrarRegistro"
            android:src="@android:drawable/ic_menu_delete" />

</LinearLayout>
