<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/Cabecera"
        android:text="@string/modificarRegistros" />

    <TableLayout
        style="@style/Tabla"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/tableRow1"
           android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/dni"
                style="@style/EstiloTextView"
                android:text="@string/dni" />

            <TextView
                android:id="@+id/dniTextModificar"
                style="@style/DNI"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/nombre"
                style="@style/EstiloTextView"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/nombreTextModificar"
                style="@style/EstiloEditText"
                android:ems="10"
                android:inputType="text"
                android:maxLength="15" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/apellido"
                style="@style/EstiloTextView"
                android:text="@string/apellidos" />

            <EditText
                android:id="@+id/apellidoTextModificar"
                style="@style/EstiloEditText"
                android:ems="10"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/direccion"
                style="@style/EstiloTextView"
                android:text="@string/direccion" />

            <EditText
                android:id="@+id/direccionTextModificar"
                style="@style/EstiloEditText"
                android:ems="10"
                android:inputType="text"
                android:maxLength="50" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/telefono"
                style="@style/EstiloTextView"
                android:text="@string/telefono" />

            <EditText
                android:id="@+id/telefonoTextModificar"
                style="@style/EstiloEditText"
                android:ems="10"
                android:inputType="text"
                android:maxLength="12" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/equipo"
                style="@style/EstiloTextView"

                android:text="@string/equipo" />

            <EditText
                android:id="@+id/equipoTextModificar"
                style="@style/EstiloEditText"
                
                android:inputType="text"
                android:maxLength="2" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="modificarRegistro"
        android:src="@android:drawable/ic_menu_edit" />

</LinearLayout>