<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView1"
         style="@style/Cabecera"
        android:text="@string/insertarRegistros" 
        android:layout_gravity="center_horizontal"/>
    
    <TableLayout
        style="@style/Tabla"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/dni"
                style="@style/EstiloTextView"
                android:text="@string/dni" />

            <TextView
                android:id="@+id/dniTextInsertar"
                style="@style/DNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow2"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/nombre"
                style="@style/EstiloTextView"
                android:text="@string/nombre" />

            <EditText
                style="@style/EstiloEditText"
                android:id="@+id/nombreTextInsertar"
                android:inputType="text"
                android:maxLength="15"
                android:ems="10" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow3"
            android:layout_weight="1"
            style="@style/Fila">

            <TextView
                android:id="@+id/apellido"
                style="@style/EstiloTextView"
                android:text="@string/apellidos" />

            <EditText
                style="@style/EstiloEditText"
                android:id="@+id/apellidoTextInsertar"
                android:inputType="text"
                android:maxLength="30"
                android:ems="10" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow4"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/direccion"
                style="@style/EstiloTextView"
                android:text="@string/direccion" />

            <EditText
                style="@style/EstiloEditText"
                android:id="@+id/direccionTextInsertar"
                android:inputType="text"
                android:maxLength="50"
                android:ems="10" />

        </TableRow>
         <TableRow
            android:id="@+id/tableRow5"
            android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/telefono"
                style="@style/EstiloTextView"
                android:text="@string/telefono" />

            <EditText
                style="@style/EstiloEditText"
                android:id="@+id/telefonoTextInsertar"
                android:inputType="text"
                android:maxLength="12"
                android:ems="10" />

        </TableRow>

          <TableRow
            android:id="@+id/tableRow6"
           android:layout_weight="1"
            style="@style/Fila" >

            <TextView
                android:id="@+id/equipo"
                style="@style/EstiloTextView"
                android:text="@string/equipo" />

            <EditText
                style="@style/EstiloEditText"
                android:id="@+id/equipoTextInsertar"
                android:inputType="text"
                android:maxLength="2"
                android:ems="10" />

        </TableRow>
    </TableLayout>
    <ImageButton
        android:layout_gravity="center_horizontal"
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="insertarRegistro"
            android:src="@android:drawable/ic_input_add" />

</LinearLayout>
